--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -17,12 +17,13 @@ jobs:
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
           feed_list: "https://deletefromuser.github.io/index.xml"
-#           template: "- $date - [$title]($url)"
-#           date_format: yyyy-mm-dd
+          template: \u2010 $date - [$title]($url)
+          date_format: yyyy-mm-dd
+          tag_post_pre_newline: true
       - name: Pull in github page articles
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
           comment_tag_name: "READ-BOOK-LIST"
           feed_list: "https://deletefromuser.github.io/read/index.xml"
-#           template: "- $date - [$title]($url)"
-#           date_format: yyyy-mm-dd
+          template: \u2010 $date - [$title]($url)
+          date_format: yyyy-mm-dd
