--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -17,7 +17,7 @@ jobs:
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
           feed_list: "https://deletefromuser.github.io/index.xml"
-          template: <li>$date - <a href="$url" rel="nofollow">$title</a></li>
+          template: '<li>$date - <a href="$url" rel="nofollow">$title</a></li>'
           date_format: yyyy-mm-dd
           tag_post_pre_newline: true
       - name: Pull in github page articles
@@ -25,7 +25,7 @@ jobs:
         with:
           comment_tag_name: "READ-BOOK-LIST"
           feed_list: "https://deletefromuser.github.io/read/index.xml"
-          template: <li>$date - <a href="$url" rel="nofollow">$title</a></li>
+          template: '<li>$date - <a href="$url" rel="nofollow">$title</a></li>'
           date_format: yyyy-mm-dd
           tag_post_pre_newline: true
 #           template: \- $date - [$title]($url)
